[metadata]
name = berbl-exp-2022-gecco
version = 1.0.0
author = berbl
author_email = berbl@berbl.berbl
description = Experiments for the BERBL paper submited to GECCO 2022
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/berbl-dev/berbl-exp-2022-gecco
project_urls =
    Bug Tracker = https://github.com/berbl-dev/berbl-exp-2022-gecco/issues
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
install_requires =
    berbl-exp ==1.0.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
